<resources>

    <string name="app_name">WifiTest</string>
    <string name="enterGame">立即体验</string>
    <string name="smallConnect">微联</string>
    <string name="find">发现</string>
    <string name="user">我的</string>
    <string name="closed">关闭中</string>
    <string name="opened">已开启</string>
    <string name="equipmentId">设备编号：</string>
    <string name="equipmentName">设备名称：</string>
    <string name="currentVoltage">当前电压：</string>
    <string name="currentElectric">当前电流：</string>
    <string name="lastElectricQuantity">上次电量：</string>
    <string name="currentQuantity">当前电量：</string>
    <string name="availableQuantity">可用电量：</string>
    <string name="searchEquipment">搜索附近设备</string>
    <string name="checkTCPConnect">检查设备连接</string>
    <string name="buildTCPConnect">建立网络连接</string>
    <string name="testTCPConnect">测试网络连接</string>
    <string name="waitConnectSuccess">等待连接成功</string>

</resources>