<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TitleTable"
        android:layout_alignParentTop="true" >

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_fra"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/TitleTable"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/white" >

        <ImageView
            android:id="@+id/image_Title_connect"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@+id/text_Title_connect"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="50dp"
            android:src="@drawable/title_connect_selector" />

        <TextView
            android:id="@+id/text_Title_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/image_Title_connect"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/image_Title_connect"
            android:gravity="center_horizontal"
            android:text="@string/smallConnect"
            android:textColor="@color/pink"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/image_Title_find"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@+id/text_Title_find"
            android:layout_alignTop="@+id/image_Title_connect"
            android:layout_centerHorizontal="true"
            android:src="@drawable/title_find_selector" />

        <TextView
            android:id="@+id/text_Title_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/image_Title_find"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/image_Title_find"
            android:gravity="center_horizontal"
            android:text="@string/find"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/image_Title_user"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@+id/text_Title_user"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:src="@drawable/title_user_selector" />

        <TextView
            android:id="@+id/text_Title_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/image_Title_user"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/image_Title_user"
            android:gravity="center_horizontal"
            android:text="@string/user"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>